--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@supabase/auth-helpers-nextjs": "^0.8.1",
     "@supabase/supabase-js": "^2.37.0",
+    "@tanstack/react-query": "^4.35.3",
     "cmdk": "^0.2.0",
     "drizzle-orm": "^0.28.6",
     "lucide-react": "0.279.0",
