--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "prisma generate && next build",
     "start": "next start",
-    "drizzle:migrate": "drizzle-kit generate:pg",
+    "drizzle:migration:gen": "drizzle-kit generate:pg",
+    "drizzle:migration:run": "ts-node -r dotenv/config src/db/migrate.ts",
     "lint": "next lint",
     "lint:fix": "eslint --fix --ext .js,.jsx,.ts,.tsx .",
     "format": "prettier --check \"**/*.{css,js,json,jsx,ts,tsx}\" --cache",
@@ -28,9 +29,10 @@
     "@supabase/supabase-js": "^2.37.0",
     "@tanstack/react-query": "^4.35.3",
     "cmdk": "^0.2.0",
+    "dotenv": "^16.3.1",
     "drizzle-orm": "^0.28.6",
     "lucide-react": "0.279.0",
-    "next": "^13.5.3",
+    "next": "^13.5.4",
     "next-themes": "^0.2.1",
     "nza": "^0.1.14",
     "postgres": "^3.3.5",
@@ -43,8 +45,8 @@
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3",
     "@types/node": "^20.6.3",
-    "@types/react": "^18.2.22",
-    "@types/react-dom": "^18.2.7",
+    "@types/react": "^18.2.23",
+    "@types/react-dom": "^18.2.8",
     "@typescript-eslint/parser": "^6.7.2",
     "autoprefixer": "^10.4.16",
     "class-variance-authority": "^0.7.0",
@@ -60,6 +62,7 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
 }
