--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
     "@microlink/mql": "^0.11.2",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-context-menu": "^2.1.4",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
@@ -32,7 +34,7 @@
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.28.6",
     "lucide-react": "0.279.0",
-    "next": "^13.5.4",
+    "next": "^14.0.0",
     "next-themes": "^0.2.1",
     "nza": "^0.1.14",
     "postgres": "^3.3.5",
@@ -45,7 +47,7 @@
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3",
     "@next/bundle-analyzer": "^13.5.5",
-    "@types/node": "^20.6.3",
+    "@types/node": "^20.7.2",
     "@types/react": "^18.2.23",
     "@types/react-dom": "^18.2.8",
     "@typescript-eslint/parser": "^6.7.2",
