--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,12 @@
+# ignore, it's to replicate Vercel environment variables behaviour
+VERCEL=1
+
 # private
 DATABASE_URL=
 
 # public
+# this will be the URL of the Vercel deployment (or domain if it's production)
+NEXT_PUBLIC_URL=http://localhost:3000
+
 NEXT_PUBLIC_SUPABASE_URL=your-supabase-url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key
