--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
     "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
-    "@supabase/auth-helpers-nextjs": "^0.8.1",
+    "@supabase/ssr": "^0.0.5",
     "@supabase/supabase-js": "^2.37.0",
+    "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^4.35.3",
     "cmdk": "^0.2.0",
     "dotenv": "^16.3.1",
