--- a/package.json
+++ b/package.json
@@ -30,17 +30,17 @@
     "@supabase/ssr": "^0.0.5",
     "@supabase/supabase-js": "^2.37.0",
     "@t3-oss/env-nextjs": "^0.7.1",
-    "@tanstack/react-query": "^4.35.3",
+    "@tanstack/react-query": "latest",
     "cmdk": "^0.2.0",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.28.6",
     "lucide-react": "0.279.0",
-    "next": "^14.0.0",
+    "next": "latest",
     "next-themes": "^0.2.1",
     "nza": "^0.1.14",
     "postgres": "^3.3.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "latest",
+    "react-dom": "latest",
     "react-hook-form": "^7.46.2",
     "react-wrap-balancer": "^1.1.0",
     "zod": "^3.22.2"
@@ -53,6 +53,7 @@
     "@types/react-dom": "^18.2.8",
     "@typescript-eslint/parser": "^6.7.2",
     "autoprefixer": "^10.4.16",
+    "bun-types": "^1.0.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "drizzle-kit": "^0.19.13",
@@ -68,6 +69,6 @@
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.2.2"
+    "typescript": "latest"
   }
 }
