--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,4 @@
 {
-  "ts-node": {
-    "compilerOptions": {
-      "module": "CommonJS",
-      "verbatimModuleSyntax": false
-    }
-  },
   "compilerOptions": {
     "target": "ESNext",
     "lib": ["dom", "dom.iterable", "esnext"],
@@ -20,6 +14,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "types": ["bun-types"],
     "plugins": [
       {
         "name": "next"
