--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bookmarks",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "drizzle:migration:gen": "drizzle-kit generate:pg",
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
-    "@microlink/mql": "^0.12.2",
+    "@microlink/mql": "^0.13.4",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-context-menu": "^2.1.5",
@@ -28,46 +28,48 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@supabase/ssr": "^0.1.0",
-    "@supabase/supabase-js": "^2.39.6",
+    "@supabase/supabase-js": "^2.39.8",
     "@t3-oss/env-nextjs": "^0.9.2",
-    "@tanstack/react-query": "^5.21.2",
-    "cmdk": "^0.2.1",
-    "dotenv": "^16.4.4",
-    "drizzle-orm": "^0.29.3",
-    "lucide-react": "0.331.0",
-    "next": "^14.1.0",
-    "next-themes": "^0.2.1",
+    "@tanstack/react-query": "^5.28.6",
+    "cmdk": "^1.0.0",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.30.4",
+    "esbuild": "^0.20.2",
+    "esbuild-register": "^3.5.0",
+    "lucide-react": "0.363.0",
+    "next": "canary",
+    "next-themes": "^0.3.0",
     "nza": "^0.1.14",
-    "postgres": "^3.4.3",
+    "postgres": "^3.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.50.1",
+    "react-hook-form": "^7.51.1",
     "react-wrap-balancer": "^1.1.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
-    "@next/bundle-analyzer": "^14.1.0",
-    "@types/node": "^20.11.19",
-    "@types/react": "^18.2.56",
-    "@types/react-dom": "^18.2.19",
-    "@typescript-eslint/parser": "^7.0.1",
-    "autoprefixer": "^10.4.17",
+    "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
+    "@next/bundle-analyzer": "^14.1.4",
+    "@types/node": "^20.11.30",
+    "@types/react": "^18.2.69",
+    "@types/react-dom": "^18.2.22",
+    "@typescript-eslint/parser": "^7.3.1",
+    "autoprefixer": "^10.4.19",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "drizzle-kit": "^0.20.14",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "^14.1.0",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.1.4",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-tailwindcss": "^3.14.2",
-    "postcss": "^8.4.35",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-tailwindcss": "^3.15.1",
+    "postcss": "^8.4.38",
     "prettier": "^3",
-    "tailwind-merge": "^2.2.1",
+    "tailwind-merge": "^2.2.2",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.4.3"
   }
 }
